kubernetes/canary-deployment/app/api-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2
  namespace: osm-canary-deployment-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v2
  template:
    metadata:
      labels:
        app: api-v2
    spec:
      serviceAccountName: api-v2-service-account
      containers:
        - image: thorstenhans/osm-sample-api-v2:0.0.4
          name: api
          ports:
            - containerPort: 80
              name: http
