kubernetes/canary-deployment/app/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: osm-canary-deployment-sample-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: osm-canary-deployment-sample-app
spec:
  ports:
    - port: 80
      name: api-port
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-v1
  namespace: osm-canary-deployment-sample-app
spec:
  selector:
    app: api-v1
  ports:
    - port: 80
      name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: api-v2
  namespace: osm-canary-deployment-sample-app
spec:
  selector:
    app: api-v2
  ports:
    - port: 80
      name: api-port
